--- a/spa/Dockerfile
+++ b/spa/Dockerfile
@@ -4,8 +4,9 @@
 FROM node:lts-alpine
 
 # Establishing the endpoint of the frontend 
-# sudo echo 'VUE_APP_API_ENDPOINT "http://10.0.0.8:4001/api"' >> vuego-demoapp/spa/.env.production.local
-ENV VUE_APP_API_ENDPOINT="http://xxxx:4001/api"
+EXPOSE 80
+RUN echo 'VUE_APP_API_ENDPOINT="http://10.0.0.8:4001/api"' >> .env.production
+# If it doesn't work try to erase the :4001, if it doesn't work either try to erase the /api too
 
 # install simple http server for serving static content
 RUN npm install -g http-server
@@ -25,5 +26,6 @@ COPY . .
 # build app for production with minification
 RUN npm run build
 
-EXPOSE 80
-CMD [ "http-server", "dist" ]
+# To install NGINX and execute the website on it
+FROM nginx:latest
+COPY --from=0 /app/dist /usr/share/nginx/html
