--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.9'
 
 services:
   backend:
-    build: ./server
+    image: crmejiam/vuego-demoapp:backend
     ports:
       - 4001:4001
       
   frontend:
-    build: ./spa
+    image: crmejiam/vuego-demoapp:frontend
     ports:
       - 5000:80
     environment:
